--- a/valence.yaml
+++ b/valence.yaml
@@ -1051,9 +1051,9 @@ data:
       kubernetes_sd_configs:
       - role: endpoints
       relabel_configs:
-      - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_managed_by]
+      - source_labels: [__meta_kubernetes_service_label_valence_net_prometheus]
         separator: ;
-        regex: valence
+        regex: "true"
         replacement: $1
         action: keep
       - source_labels: [__meta_kubernetes_endpoint_port_name]
