dont update statefulset annotation on version bumps

--- a/manifests/valence/operator/kustomization.yaml
+++ b/manifests/valence/operator/kustomization.yaml
@@ -1,6 +1,7 @@
 commonLabels:
   app.kubernetes.io/name: valence
   app.kubernetes.io/component: operator
+  app.kubernetes.io/version: 0.2.2
 resources:
   - crds.yaml
   - rbac.yaml
