--- a/example/workloads/todo-backend-django-valence/deployment.yaml
+++ b/example/workloads/todo-backend-django-valence/deployment.yaml
@@ -8,7 +8,12 @@ metadata:
   annotations:
     valence.io/optimizer.configure: "true"
 spec:
-  revisionHistoryLimit: 2
+  revisionHistoryLimit: 3
+  replicas: 2
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     spec:
       restartPolicy: Always
