--- a/manifests/valence/prometheus/config-map.yaml
+++ b/manifests/valence/prometheus/config-map.yaml
@@ -11,7 +11,7 @@ data:
     rule_files:
       - "/etc/prometheus-rules/*.rules"
     scrape_configs:
-    - job_name: kube-state-metrics/0
+    - job_name: kube-state-metrics
       honor_labels: true
       scrape_interval: 1m
       scrape_timeout: 10s
@@ -73,101 +73,6 @@ data:
         regex: (.*)
         target_label: endpoint
         replacement: metrics
-        action: replace
-    - job_name: kube-state-metrics/1
-      scrape_interval: 1m
-      scrape_timeout: 10s
-      metrics_path: /metrics
-      scheme: http
-      kubernetes_sd_configs:
-      - role: endpoints
-        namespaces:
-          names:
-          - valence-system
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      tls_config:
-        insecure_skip_verify: true
-      relabel_configs:
-      - source_labels: [__meta_kubernetes_service_label_app]
-        separator: ;
-        regex: kube-state-metrics
-        replacement: $1
-        action: keep
-      - source_labels: [__meta_kubernetes_endpoint_port_name]
-        separator: ;
-        regex: telemetry
-        replacement: $1
-        action: keep
-      - source_labels: [__meta_kubernetes_namespace]
-        separator: ;
-        regex: (.*)
-        target_label: namespace
-        replacement: $1
-        action: replace
-      - source_labels: [__meta_kubernetes_endpoint_address_target_kind, __meta_kubernetes_endpoint_address_target_name]
-        separator: ;
-        regex: Node;(.*)
-        target_label: node
-        replacement: ${1}
-        action: replace
-      - source_labels: [__meta_kubernetes_endpoint_address_target_kind, __meta_kubernetes_endpoint_address_target_name]
-        separator: ;
-        regex: Pod;(.*)
-        target_label: pod
-        replacement: ${1}
-        action: replace
-      - source_labels: [__meta_kubernetes_service_name]
-        separator: ;
-        regex: (.*)
-        target_label: service
-        replacement: $1
-        action: replace
-      - source_labels: [__meta_kubernetes_service_name]
-        separator: ;
-        regex: (.*)
-        target_label: job
-        replacement: ${1}
-        action: replace
-      - source_labels: [__meta_kubernetes_service_label_app]
-        separator: ;
-        regex: (.+)
-        target_label: job
-        replacement: ${1}
-        action: replace
-      - separator: ;
-        regex: (.*)
-        target_label: endpoint
-        replacement: telemetry
-        action: replace
-    - job_name: kubernetes-nodes
-      scrape_interval: 1m
-      scrape_timeout: 10s
-      metrics_path: /metrics
-      scheme: https
-      kubernetes_sd_configs:
-      - api_server: null
-        role: node
-        namespaces:
-          names: []
-      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-      tls_config:
-        ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        insecure_skip_verify: true
-      relabel_configs:
-      - separator: ;
-        regex: __meta_kubernetes_node_label_(.+)
-        replacement: $1
-        action: labelmap
-      - separator: ;
-        regex: (.*)
-        target_label: __address__
-        replacement: kubernetes.default.svc:443
-        action: replace
-      - source_labels: [__meta_kubernetes_node_name]
-        separator: ;
-        regex: (.+)
-        target_label: __metrics_path__
-        replacement: /api/v1/nodes/${1}/proxy/metrics
         action: replace
     - job_name: kubernetes-nodes-cadvisor
       scrape_interval: 1m
