--- a/valence.yaml
+++ b/valence.yaml
@@ -848,6 +848,8 @@ data:
       evaluation_interval: 10s
     rule_files:
       - "/etc/prometheus-rules/*.rules"
+    remote_write:
+    - url: http://optimization-operator.valence-system:8080/write
     scrape_configs:
     - job_name: kube-state-metrics
       honor_labels: true
