--- a/example/workloads/todo-backend-django/deployment.yaml
+++ b/example/workloads/todo-backend-django/deployment.yaml
@@ -9,8 +9,8 @@ spec:
   replicas: 2
   strategy:
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
+      maxSurge: 2
+      maxUnavailable: 10%
   template:
     metadata:
       labels:
@@ -18,36 +18,36 @@ spec:
     spec:
       restartPolicy: Always
       containers:
-      - name: prometheus-proxy
-        image: valencenet/prometheus-proxy:0.2.8
-        imagePullPolicy: IfNotPresent
-        env:
-        - name: TARGET_ADDRESS
-          value: "http://127.0.0.1:8000"
-        args:
-          - start
-      - image: manifoldco/todo-backend-django:latest
-        imagePullPolicy: IfNotPresent
-        name: todo-backend-django
-        resources:
-          limits:
-            cpu: 500m
-            memory: 500M
-          requests:
-            cpu: 250m
-            memory: 250M
-        env:
-        - name: PORT
-          value: "8000"
-        ports:
-        - containerPort: 8000
-          name: http
-          protocol: TCP
-        readinessProbe:
-          httpGet:
-            path: /todos
-            port: 8000
-          initialDelaySeconds: 5
-          periodSeconds: 60
-          timeoutSeconds: 30
-          failureThreshold: 30
+        - name: prometheus-proxy
+          image: valencenet/prometheus-proxy:0.2.8
+          imagePullPolicy: IfNotPresent
+          env:
+            - name: TARGET_ADDRESS
+              value: "http://127.0.0.1:8000"
+          args:
+            - start
+        - image: manifoldco/todo-backend-django:latest
+          imagePullPolicy: IfNotPresent
+          name: todo-backend-django
+          resources:
+            limits:
+              cpu: 500m
+              memory: 500M
+            requests:
+              cpu: 250m
+              memory: 250M
+          env:
+            - name: PORT
+              value: "8000"
+          ports:
+            - containerPort: 8000
+              name: http
+              protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /todos
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 60
+            timeoutSeconds: 30
+            failureThreshold: 30
