--- a/valence.yaml
+++ b/valence.yaml
@@ -5,7 +5,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: valence-system
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
@@ -15,7 +15,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: servicelevelobjectives.optimizer.valence.io
 spec:
   group: optimizer.valence.io
@@ -41,7 +41,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: valence-operator
   namespace: valence-system
 ---
@@ -83,7 +83,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: valence:optimization-operator
 rules:
 - apiGroups:
@@ -153,7 +153,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: valence:optimization-operator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -919,7 +919,7 @@ data:
         replacement: metrics
         action: replace
     - job_name: kubernetes-nodes-cadvisor
-      scrape_interval: 1m
+      scrape_interval: 5s
       scrape_timeout: 10s
       metrics_path: /metrics
       scheme: https
@@ -1102,7 +1102,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: optimization-operator
   namespace: valence-system
 spec:
@@ -1114,7 +1114,7 @@ spec:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   type: NodePort
 ---
 apiVersion: v1
@@ -1208,7 +1208,7 @@ metadata:
     app.kubernetes.io/component: operator
     app.kubernetes.io/name: valence
     app.kubernetes.io/part-of: valence
-    app.kubernetes.io/version: 0.2.8
+    app.kubernetes.io/version: 0.2.10
   name: optimization-operator
   namespace: valence-system
 spec:
@@ -1218,14 +1218,14 @@ spec:
       app.kubernetes.io/component: operator
       app.kubernetes.io/name: valence
       app.kubernetes.io/part-of: valence
-      app.kubernetes.io/version: 0.2.8
+      app.kubernetes.io/version: 0.2.10
   template:
     metadata:
       labels:
         app.kubernetes.io/component: operator
         app.kubernetes.io/name: valence
         app.kubernetes.io/part-of: valence
-        app.kubernetes.io/version: 0.2.8
+        app.kubernetes.io/version: 0.2.10
     spec:
       containers:
       - args:
@@ -1237,7 +1237,7 @@ spec:
           value: "20"
         - name: PROMETHEUS_URL
           value: http://prometheus-valence.valence-system.svc:9090
-        image: valencenet/valence:0.2.8
+        image: valencenet/valence:0.2.10
         imagePullPolicy: Always
         name: optimization-operator
         resources:
