--- a/valence.yaml
+++ b/valence.yaml
@@ -919,8 +919,8 @@ data:
         replacement: metrics
         action: replace
     - job_name: kubernetes-nodes-cadvisor
-      scrape_interval: 5s
-      scrape_timeout: 5s
+      scrape_interval: 1m
+      scrape_timeout: 10s
       metrics_path: /metrics
       scheme: https
       kubernetes_sd_configs:
