add reporting dashboard

--- a/manifests/valence/grafana/dashboard-valence.yaml
+++ b/manifests/valence/grafana/dashboard-valence.yaml
@@ -21,8 +21,7 @@ data:
       "editable": true,
       "gnetId": null,
       "graphTooltip": 0,
-      "id": 1,
-      "iteration": 1559313049824,
+      "iteration": 1559914263326,
       "links": [],
       "panels": [
         {
@@ -406,7 +405,7 @@ data:
           "steppedLine": false,
           "targets": [
             {
-              "expr": "avg(histogram_quantile($LatencyPercentile, sum(rate(envoy_http_downstream_rq_time_bucket{service=\"$deployment\"}[1m])) by(le, pod)))",
+              "expr": "avg(histogram_quantile($LatencyPercentile, sum(rate(envoy_http_downstream_rq_time_bucket{service=\"$deployment\"}[30s])) by(le, pod)))",
               "format": "time_series",
               "instant": false,
               "interval": "",
@@ -418,6 +417,7 @@ data:
               "expr": "valence_slo_http_latency{name=\"$deployment\"}",
               "format": "time_series",
               "intervalFactor": 1,
+              "legendFormat": "SLO",
               "refId": "B"
             }
           ],
@@ -567,7 +567,6 @@ data:
           {
             "allValue": null,
             "current": {
-              "selected": false,
               "tags": [],
               "text": "todo-backend-django-valence",
               "value": "todo-backend-django-valence"
@@ -592,7 +591,6 @@ data:
           {
             "allValue": null,
             "current": {
-              "selected": true,
               "tags": [],
               "text": "0.95",
               "value": "0.95"
@@ -635,7 +633,7 @@ data:
         ]
       },
       "time": {
-        "from": "now-1h",
+        "from": "now-3h",
         "to": "now"
       },
       "timepicker": {
