--- a/tooling.yaml
+++ b/tooling.yaml
@@ -278,7 +278,7 @@ spec:
       containers:
       - command:
         - /metrics-server
-        - --source=kubernetes.summary_api:''
+        - --source=kubernetes.summary_api:https://kubernetes.default?kubeletHttps=true&kubeletPort=10250&insecure=true
         - --metric-resolution=5s
         image: gcr.io/google_containers/metrics-server-amd64:v0.2.1
         imagePullPolicy: Always
